Adds helper scripts

--- a/conf/postgresql.conf
+++ b/conf/postgresql.conf
@@ -63,7 +63,7 @@
 port = 5442				# (change requires restart)
 max_connections = 100			# (change requires restart)
 #superuser_reserved_connections = 3	# (change requires restart)
-#unix_socket_directories = '/tmp'	# comma-separated list of directories
+# unix_socket_directories = '/tmp'	# comma-separated list of directories
 					# (change requires restart)
 #unix_socket_group = ''			# (change requires restart)
 #unix_socket_permissions = 0777		# begin with 0 to use octal notation
@@ -563,26 +563,26 @@ log_timezone = 'Canada/Eastern'
 
 # - Locale and Formatting -
 
-datestyle = 'iso, ymd'
-#intervalstyle = 'postgres'
-timezone = 'Canada/Eastern'
-#timezone_abbreviations = 'Default'     # Select the set of available time zone
-					# abbreviations.  Currently, there are
-					#   Default
-					#   Australia (historical usage)
-					#   India
-					# You can create your own file in
-					# share/timezonesets/.
-#extra_float_digits = 0			# min -15, max 3
-#client_encoding = sql_ascii		# actually, defaults to database
-					# encoding
+# datestyle = 'iso, ymd'
+# #intervalstyle = 'postgres'
+# timezone = 'Canada/Eastern'
+# #timezone_abbreviations = 'Default'     # Select the set of available time zone
+# 					# abbreviations.  Currently, there are
+# 					#   Default
+# 					#   Australia (historical usage)
+# 					#   India
+# 					# You can create your own file in
+# 					# share/timezonesets/.
+# #extra_float_digits = 0			# min -15, max 3
+# #client_encoding = sql_ascii		# actually, defaults to database
+# 					# encoding
 
-# These settings are initialized by initdb, but they can be changed.
-lc_messages = 'en_CA.UTF-8'			# locale for system error message
-					# strings
-lc_monetary = 'en_CA.UTF-8'			# locale for monetary formatting
-lc_numeric = 'en_CA.UTF-8'			# locale for number formatting
-lc_time = 'en_CA.UTF-8'				# locale for time formatting
+# # These settings are initialized by initdb, but they can be changed.
+# lc_messages = 'en_CA.UTF-8'			# locale for system error message
+# 					# strings
+# lc_monetary = 'en_CA.UTF-8'			# locale for monetary formatting
+# lc_numeric = 'en_CA.UTF-8'			# locale for number formatting
+# lc_time = 'en_CA.UTF-8'				# locale for time formatting
 
 # default configuration for text search
 default_text_search_config = 'pg_catalog.english'
